# nerf-playground

./: 2d.ipynb  3d.ipynb  README.md  hello.py  image.ipynb  pyproject.toml
src/nerfpg/: __init__.py
